up pet component

--- a/src/app/font-size-editor/font-size-editor.component.html
+++ b/src/app/font-size-editor/font-size-editor.component.html
@@ -1,1 +1,23 @@
-<p>font-size-editor works!</p>
+<h2 >Font size editor</h2>
+
+<div>
+  <label >Enter font size (px): </label>
+  <input type="range" min="9" max="72" value="18" [(ngModel)]="fontsize">
+</div>
+<p [style.fontSize.px]="fontsize">
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam culpa deleniti dolor dolores doloribus error harum ipsum libero maxime nam nobis placeat quae quos saepe similique, totam unde ut voluptas.
+</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
