add name-card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
 
 <!--<app-font-size-editor></app-font-size-editor>-->
 <!--<app-hackernews (onclickShowButton)="showArticleContent($event)"></app-hackernews>-->
-<app-pet></app-pet>
+<!--<app-pet></app-pet>-->
+<app-name-card cardName="Professional Dev" email="prodev@abc.xyz" phone="0123456789"></app-name-card>
 
