--- a/src/app/name-card/name-card.component.html
+++ b/src/app/name-card/name-card.component.html
@@ -1,1 +1,10 @@
-<p>name-card works!</p>
+<div class="name-card">
+  <div class="name-card__content-left">
+    <img src="https://cdn.24h.com.vn/upload/2-2020/images/2020-04-24/1587664062-610-nu-sinh-viet-19-tuoi-mac-ao-sieu-tao-bao-94491863_1541390706035521_2738988399430991872_n-1587612005-width780height960.jpg" alt="Logo" class="name-card__avatar">
+  </div>
+  <div class="name-card__content-right">
+    <h3 class="name-card__heading">{{ cardName }}</h3>
+    <p class="name-card__text">{{ email }}</p>
+    <p class="name-card__text">{{ phone }}</p>
+  </div>
+</div>
