--- a/src/app/pet/pet.component.html
+++ b/src/app/pet/pet.component.html
@@ -1,26 +1,13 @@
-<!--<h2>Pet profile</h2>-->
-<!--<label>-->
-<!--  Pet name:-->
-<!--  <input type="text" (change)="updateName($event.target.value)">-->
-<!--</label>-->
-<!--<br >-->
-<!--<label>-->
-<!--  Pet image:-->
-<!--  <input type="url" (change)="updateImage($event.target.value)">-->
-<!--</label>-->
-<!--<br >-->
-<!--<h3>Pet name: {{petName}}</h3>-->
-<!--<img [src]="petImage" style="max-width: 100%">-->
 <h2>Pet profile</h2>
 <label for="">
   Pet name:
   <input type="text" (change)="updateName($event.target.value)">
 </label>
 <br>
-<label for="">
-  Pet image:
-  <input type="url" (change)="updateImage($event.target.value)">
-</label>
+<!--<label for="">-->
+<!--  Pet image:-->
+<!--  <input type="url" (change)="updateImage($event.target.value)">-->
+<!--</label>-->
 <br>
 <h3>Pet name: {{petName}} </h3>
-<img [src]="petImage" style="max-width: 100%" alt="withdanh">
+<!--<img [src]="petImage" style="max-width: 100%" alt="withdanh">-->
