--- a/src/app/progress-bar/progress-bar.component.html
+++ b/src/app/progress-bar/progress-bar.component.html
@@ -1,1 +1,10 @@
-<p>progress-bar works!</p>
+<h2>Progress Bar</h2>
+<div class="progress-bar-container" [style.backgroundColor]="backgroundColor">
+  <div class="progress" [ngStyle]="{
+  backgroundColor: progressColor,
+  width: width + '%'
+  }"></div>
+</div>
+
+
+
