update youtube embed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,12 @@
 <!--<app-name-card cardName="danhwith" email="prodev@abc.xyz" phone="0123456789"></app-name-card>-->
 <!--<app-pet></app-pet>-->
 <!--<app-progress-bar width="65"></app-progress-bar>-->
+<!--<nav>-->
+<!--  <a [routerLink]="'timelines'" class="link">Life Time Counting Application</a>-->
+<!--</nav>-->
+<!--<router-outlet></router-outlet>-->
 <nav>
-  <a routerLink="timelines" class="link">Life Time Counting Application</a>
+  <h3>Youtube player</h3>
+  <a routerLink="youtube" class="link">Youtube</a>
 </nav>
 <router-outlet></router-outlet>
-
