up image gallery

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,10 @@
 <!--  <a [routerLink]="'timelines'" class="link">Life Time Counting Application</a>-->
 <!--</nav>-->
 <!--<router-outlet></router-outlet>-->
-<nav>
-  <h3>Youtube player</h3>
-  <a routerLink="youtube" class="link">Youtube</a>
-</nav>
-<router-outlet></router-outlet>
+<!--<nav>-->
+<!--  <h3>Youtube player</h3>-->
+<!--  <a routerLink="youtube" class="link">Youtube</a>-->
+<!--</nav>-->
+<!--<router-outlet></router-outlet>-->
+<app-image-gallery></app-image-gallery>
+
