--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,5 +28,15 @@
 <!--  <a routerLink="youtube" class="link">Youtube</a>-->
 <!--</nav>-->
 <!--<router-outlet></router-outlet>-->
-<app-image-gallery></app-image-gallery>
-
+<!--<app-image-gallery></app-image-gallery>-->
+<app-img-slider>
+  <app-img-slide>
+    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=1" alt="">
+  </app-img-slide>
+  <app-img-slide>
+    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=2" alt="">
+  </app-img-slide>
+  <app-img-slide>
+    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=3" alt="">
+  </app-img-slide>
+</app-img-slider>
