--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,14 +29,18 @@
 <!--</nav>-->
 <!--<router-outlet></router-outlet>-->
 <!--<app-image-gallery></app-image-gallery>-->
-<app-img-slider>
-  <app-img-slide>
-    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=1" alt="">
-  </app-img-slide>
-  <app-img-slide>
-    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=2" alt="">
-  </app-img-slide>
-  <app-img-slide>
-    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=3" alt="">
-  </app-img-slide>
-</app-img-slider>
+<!--<app-img-slider>-->
+<!--  <app-img-slide>-->
+<!--    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=1" alt="">-->
+<!--  </app-img-slide>-->
+<!--  <app-img-slide>-->
+<!--    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=2" alt="">-->
+<!--  </app-img-slide>-->
+<!--  <app-img-slide>-->
+<!--    <img src="https://via.placeholder.com/1280x420/e91e63/ffffff?text=3" alt="">-->
+<!--  </app-img-slide>-->
+<!--</app-img-slider>-->
+<nav>
+  <a routerLink="/blog">Blog</a>
+</nav>
+<router-outlet></router-outlet>
